# ShareFileBC

./: .firebaserc  build.gradle.kts  firebase.json  settings.gradle.kts
.firebase/: hosting.cHVibGlj.cache
app/: build.gradle.kts  google-services.json
app/schemas/com.example.sharefilebc.data.AppDatabase/: 1.json  2.json  3.json  4.json
app/src/main/: AndroidManifest.xml
app/src/main/res/values-night/: colors.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
public/: 404.html  index.html
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/: .gitignore  LICENSE  README.md
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/.github/workflows/: ci.yml  publish-android.yml  publish-csharp.yml
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletAndroid/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletAndroid/example/: .gitignore  README.md  gradle.properties  sample-global-gradle.properties  settings.gradle.kts  tapyrus.conf
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletAndroid/lib/: build.gradle.kts  proguard-rules.pro
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletAndroid/scripts/: build-android.sh  generate-docs.sh
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletCSharp/: README.md  docfx.json  index.md
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletCSharp/TapyrusWalletCSharp.Tests/: .gitignore  TapyrusWalletCSharp.Tests.csproj  WalletTest.cs
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/TapyrusWalletSwift/: .gitignore  Package.swift.txt  README.md  create_xcframework.sh
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/tapyrus-wallet-ffi/: .gitignore  Cargo.toml  build.rs  uniffi.toml
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/tapyrus-wallet-ffi/src/: lib.rs  wallet.udl
tapyrus_wallet_source/rust-tapyrus-wallet-ffi-0.1.2/tapyrus-wallet-ffi/tests/: master_key
(+127 files in other folders)
