[package]
name = "tapyrus-wallet-ffi"
version = "0.1.2"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
repository = "https://github.com/chaintope/rust-tapyrus-wallet-ffi"
keywords = [ "crypto", "tapyrus", "wallet"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "tapyrus_wallet_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "=0.29.0" }
tdk_wallet = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/wallet" }
tdk_sqlite = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/sqlite" }
tdk_esplora = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/esplora", default-features = false, features = ["blocking", "blocking-https-rustls"] }

[build-dependencies]
uniffi = { version = "=0.29.0", features = ["build"] }

[dev-dependencies]
uniffi = { version = "=0.29.0", features = ["bindgen-tests"] }
tdk_testenv = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/testenv", default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
tdk_chain = { git = "https://github.com/chaintope/tdk", branch = "master", subdirectory = "crates/chain" }
rand = "0.8.5"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary